# CopyThat2026

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  QualityAssuranceChecklist.md  README.md  deny.toml  page-snapshot.md
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-04-26T03-35-45-582Z.yml
apps/copythat-mobile/: README.md  index.html  package.json  vite.config.ts
apps/copythat-mobile/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/copythat-ui/: dropstack.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/copythat-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/copythat-ui/src-tauri/capabilities/: default.json
apps/copythat-ui/src-tauri/src/: backup_commands.rs  cli.rs  cloud_commands.rs  collisions.rs  commands.rs  diag_sampler.rs  dropstack.rs  elevate.rs  i18n.rs  instance_broker.rs  ipc.rs  lib.rs  main.rs  mobile_commands.rs  mount_commands.rs  notifications.rs  offload_commands.rs  plugin_commands.rs  power.rs  preview_commands.rs  queue_commands.rs  repository_commands.rs  runner.rs  sanitize_commands.rs  server_commands.rs  shell.rs  state.rs  sync_commands.rs  thumbnail.rs  version_commands.rs
apps/copythat-ui/src-tauri/tests/: command_layer.rs  queue_commands.rs
cdr-py/: README.md  cdr.py  test_conformance.py
crates/copythat-audit/: Cargo.toml
crates/copythat-chunk/: Cargo.toml
crates/copythat-cli/: Cargo.toml
crates/copythat-cli/src/: cli.rs  jobspec.rs  lib.rs  main.rs  output.rs  runtime.rs  schedule.rs  volume_watch.rs
crates/copythat-cli/src/commands/: audit.rs  completions.rs  config.rs  copy.rs  history.rs  migrate.rs  mod.rs  mount.rs  plan.rs  provenance.rs  remote.rs  serve.rs  shred.rs  stack.rs  sync.rs  verify.rs  version.rs
crates/copythat-cloud/: Cargo.toml
crates/copythat-core/: Cargo.toml
crates/copythat-core/src/: collision.rs  control.rs  engine.rs  error.rs  event.rs  lib.rs  options.rs  queue.rs  tree.rs  verify.rs  versioning.rs
crates/copythat-core/tests/: basic_copy.rs  errors.rs  metadata.rs  move_ops.rs  pause_resume.rs  queue.rs  queue_registry.rs  symlink.rs  tree_basic.rs  tree_collisions.rs
crates/copythat-core/tests/common/: mod.rs
crates/copythat-crypt/: Cargo.toml
crates/copythat-hash/: Cargo.toml
crates/copythat-hash/src/: algorithm.rs  error.rs  event.rs  impls.rs  lib.rs  sidecar.rs  streaming.rs  verify.rs
crates/copythat-hash/tests/: integration.rs
crates/copythat-helper/: Cargo.toml
crates/copythat-history/: Cargo.toml
crates/copythat-history/src/: handle.rs  lib.rs  types.rs
crates/copythat-i18n/: Cargo.toml
crates/copythat-journal/: Cargo.toml
crates/copythat-mobile/: Cargo.toml
crates/copythat-mount/: Cargo.toml
crates/copythat-mount/src/: fuse_backend.rs  fuse_filesystem.rs  lib.rs  platform.rs  tree.rs  winfsp_backend.rs
crates/copythat-perceptual/: Cargo.toml
crates/copythat-platform/: Cargo.toml
crates/copythat-platform/src/: disk.rs  dispatcher.rs  helpers.rs  hook.rs  lib.rs  meta.rs  network.rs  outcome.rs  presence.rs  process.rs  reflink_path.rs  sanitize.rs  secure_pipe.rs  smb.rs  topology.rs  volume.rs  wake_lock.rs
crates/copythat-platform/src/native/: fallback.rs  linux.rs  macos.rs  mod.rs  parallel.rs  windows.rs  windows_ioring.rs  windows_overlapped.rs
crates/copythat-platform/tests/: dispatcher.rs
crates/copythat-plugin/: Cargo.toml
crates/copythat-power/: Cargo.toml
crates/copythat-provenance/: Cargo.toml
crates/copythat-recovery/: Cargo.toml
crates/copythat-secure-delete/: Cargo.toml
crates/copythat-secure-delete/src/: engine.rs  error.rs  event.rs  lib.rs  linux_helper.rs  purge.rs  sanitize.rs  ssd.rs  tree.rs  windows_helper.rs
crates/copythat-secure-delete/tests/: shred_file.rs  shred_tree.rs
crates/copythat-server/: Cargo.toml
crates/copythat-server/src/: http.rs  lib.rs  otel.rs  webhook.rs
crates/copythat-settings/: Cargo.toml
crates/copythat-shape/: Cargo.toml
crates/copythat-shellext/: Cargo.toml
crates/copythat-snapshot/: Cargo.toml
crates/copythat-sync/: Cargo.toml
crates/copythat-watch/: Cargo.toml
docs/: BENCHMARKS_PHASE_42.md  PEERJS_REPLACEMENT_PLAN.md  PERFORMANCE_TUNING.md  RESEARCH_PHASE_39.md  RESEARCH_PHASE_40.md  RESEARCH_PHASE_42.md  SECURITY.md  SECURITY_BACKLOG.md  SECURITY_REVIEW_PREP.md  dependency-audit.md  documentation.html  documents.html  index.html
docs/spec/: CDR-0.md
locales/ar/: copythat.ftl
locales/de/: copythat.ftl
locales/en/: copythat.ftl
locales/es/: copythat.ftl
locales/fr/: copythat.ftl
locales/hi/: copythat.ftl
locales/id/: copythat.ftl
locales/it/: copythat.ftl
locales/ja/: copythat.ftl
locales/ko/: copythat.ftl
locales/nl/: copythat.ftl
locales/pl/: copythat.ftl
locales/pt-BR/: copythat.ftl
locales/ru/: copythat.ftl
locales/tr/: copythat.ftl
locales/uk/: copythat.ftl
locales/vi/: copythat.ftl
locales/zh-CN/: copythat.ftl
packaging/: README.md
packaging/linux/: copythat.desktop
scripts/: bench-phase42.ps1  phase25_insert_sync_keys.py  phase27_insert_chunk_keys.py  phase28_insert_dropstack_keys.py
tests/: vss_com_smoke.ps1
tests/smoke/: phase_00_scaffold.sh  phase_01_core_copy.rs  phase_02_tree_queue.rs  phase_03_verify.rs  phase_04_shred.rs  phase_05_ui.ps1  phase_05_ui.sh  phase_06_fast_paths.rs  phase_07_partials.rs  phase_07a_cli_enqueue.rs  phase_07b_shellext.ps1  phase_07b_shellext.rs  phase_07c_appex.sh  phase_08_partials.rs  phase_10_totals.rs  phase_11c_substitute.rs  phase_12_settings.rs  phase_13c_parallel.rs  phase_14a_filters.rs  phase_16_package.rs  phase_17c_symlink_race.rs  phase_17d_spawn.rs  phase_19_snapshot.rs  phase_20_resume.rs  phase_22_conflict_batch.rs  phase_25_sync.rs  phase_27_chunk.rs  phase_28_dropstack.rs  phase_31b_real_probes.rs  phase_32_cloud.rs  phase_33_mount.rs  phase_35_crypt.rs  phase_36_cli.rs  phase_37_mobile.rs  phase_40_offload.rs  phase_40_smb.rs  phase_41_preview.rs  phase_42_versioning.rs  phase_43_provenance.rs  phase_44_sanitize.rs  (+22 more)
xtask/: Cargo.toml
xtask/src/: conformance.rs  main.rs  qa.rs
(+170 files in other folders)
