[workspace]
resolver = "2"
members = [
    "crates/copythat-core",
    "crates/copythat-hash",
    "crates/copythat-secure-delete",
    "crates/copythat-history",
    "crates/copythat-platform",
    "crates/copythat-i18n",
    "xtask",
    "apps/copythat-ui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Copy That 2026 Contributors"]
repository = "https://github.com/MikesRuthless12/CopyThat2026"
homepage = "https://github.com/MikesRuthless12/CopyThat2026"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
