[package]
name = "copythat-cli"
description = "Phase 36 — `copythat` command-line interface. Stable JSON-Lines output, declarative TOML jobspec with idempotent plan/apply, and 9 documented exit codes for CI/CD pipelines."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "copythat"
path = "src/main.rs"

[dependencies]
# Phase 36 — clap 4 with derive macros powers the whole CLI surface
# (subcommands + flags + help). Default features include the `color`
# / `usage` / `error-context` set we want for human-readable
# `--help`. MIT/Apache-2.0.
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
# Phase 36 — `clap_complete` emits per-shell completion scripts
# from the same clap definition. Driven by the `completions <shell>`
# subcommand. MIT/Apache-2.0.
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Phase 36 — declarative job specs are TOML. Same workspace-pinned
# version copythat-settings already uses.
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
# Phase 36 — wraps the engine for `copythat copy` / `move` / `verify`.
copythat-core = { path = "../copythat-core", version = "1" }
copythat-hash = { path = "../copythat-hash", version = "1" }
copythat-settings = { path = "../copythat-settings", version = "1" }
# Phase 36 — `copythat history` reads the same SQLite table as the GUI.
copythat-history = { path = "../copythat-history", version = "1" }
# Phase 36 — UTC timestamps in the JSON event stream. Workspace already
# carries chrono indirectly; explicit dep here keeps the surface small.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[test]]
name = "phase_36_cli"
path = "../../tests/smoke/phase_36_cli.rs"
