[package]
name = "copythat-core"
description = "Async byte-exact file copy engine for Copy That 2026."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
