[package]
name = "copythat-hash"
description = "Verification hashes (CRC32 / MD5 / SHA-1 / SHA-256 / SHA-512 / xxHash3 / BLAKE3) for Copy That 2026."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
