[package]
name = "copythat-mount"
description = "Phase 33 — mount Copy That's chunk store + history archive as a read-only filesystem (FUSE on Unix, WinFsp on Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Phase 33a shipped pure-Rust tree builder + handle types with no
# platform FFI. Phase 33c adds feature-gated backend scaffolding:
#
#   cargo build -p copythat-mount --features fuse    # Linux/macOS
#   cargo build -p copythat-mount --features winfsp  # Windows
#
# The `fuse` feature pulls `fuser` 0.15 (MIT) on Unix targets and is
# a no-op elsewhere. The `winfsp` feature is a no-op marker today:
# the obvious candidate `winfsp-sys` crate is GPL-3.0 licensed,
# which conflicts with the workspace's permissive-only allowlist.
# Phase 33d will land a WinFsp binding through either an
# MIT-licensed alternative or direct-FFI bindings we write in-tree
# under our own licence; the feature flag is kept here so the
# `WinFspBackend` type surface + `default_backend()` selector can
# already name it. Real kernel read callbacks that stream chunks
# from the Phase 27 chunk store are the same Phase 33d follow-up.
default = []
fuse = ["dep:fuser"]
winfsp = []

[dependencies]
# History + chunk-store references feed the virtual tree. The mount
# crate consumes read-only — it never opens the DBs itself, the Tauri
# runner passes live handles in.
copythat-history = { path = "../copythat-history", version = "1" }
copythat-chunk = { path = "../copythat-chunk", version = "1" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Path sanitisation on mount roots reuses the same traversal guard
# the engine's `safety::validate_path_no_traversal` enforces.
copythat-core = { path = "../copythat-core", version = "1" }

# Phase 33c — `fuser` is the actively-maintained Rust FUSE binding.
# MIT. Target-gated so a `cargo build --features fuse` on Windows
# simply skips it instead of failing at link time — the FuseBackend
# stub falls through to `MountError::BackendUnavailable` on non-
# Unix hosts.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
fuser = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "phase_33_mount"
path = "../../tests/smoke/phase_33_mount.rs"
