[package]
name = "copythat-ui"
description = "Copy That 2026 — Tauri 2.x application shell."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "copythat_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
copythat-core = { path = "../../../crates/copythat-core" }
copythat-hash = { path = "../../../crates/copythat-hash" }
copythat-secure-delete = { path = "../../../crates/copythat-secure-delete" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "test-util",
    "time",
] }
